# MultiPockGA

./: README.md  environment.yml  pyproject.toml
config/: docking.yaml  docking_meeko.yaml  vars_meeko.json  vars_meeko_6eif.json  vars_meeko_7q1p.json  vars_mgltools.json  vars_mgltools_6eif.json  vars_mgltools_7q1p.json
experiments/: smiles.txt
multipockga/ga/: __init__.py  crossover_rdkit.py  mutation_rdkit.py  runner.py
multipockga/rewards/: combiners.py  rewards.py
multipockga/rewards/providers/: docking.py  rdkit_props.py
scripts/: reward_mgltools_vina.py  run_ga.py  setup_docking_vina.sh
