[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multipockga"
version = "0.1.0"
description = "Base package for MultiPockGA experiments"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MultiPockGA Team" }]
dependencies = [
  "numpy",
  "pandas",
  "PyYAML",
  "selfies",
  "func-timeout",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
